--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -27,4 +27,17 @@
         app:layout_constraintTop_toBottomOf="@+id/textView2"
         app:layout_constraintVertical_bias="0.907"
         tools:ignore="MissingConstraints" />
+
+    <TextView
+        android:id="@+id/textResponse"
+        android:layout_width="128dp"
+        android:layout_height="219dp"
+        android:layout_marginEnd="40dp"
+        android:background="@drawable/ic_launcher_background"
+        android:text="TextView"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.968"
+        tools:ignore="MissingConstraints" />
 </androidx.constraintlayout.widget.ConstraintLayout>
